# CAsterisk

./: .gitignore  CMakeLists.txt  README.md
.bak/: expr_resolve.cpp  float_def_resolve.cpp  int_def_resolve.cpp  lambda_def_resolve.cpp
cmake/: compiler.cmake  hunter_config.cmake  install.cmake  packages.cmake  src.cmake
cmake/scheme/: basic_target_setting.cmake  exe.cmake  lib.cmake  test.cmake
cmake/vscode/: lanuch_gdb.in
doc/: flow.md
src/: catkc.cmake  catkc.cpp  catkc.launch_gdb.in  syntax.md
src/.bak/: assign_stmt_resolve.cpp
src/avalon/: debug_id.hpp
src/avalon/mpl/: type_list.hpp  type_switch.hpp  type_visit.hpp  virt_visit.hpp
src/catk/: analysis.cmake  analysis.hpp  behavior.cmake  behavior.cpp  behavior.hpp  io.cmake  semantics.hpp  setting.cpp  setting.hpp  symdb.cpp  symdb.hpp  syntax.hpp  type.cmake  type.cpp  type.hpp  utils.cpp  utils.hpp
src/catk/analysis/: alloc_sym_dep.h  assign_stmt_resolve.cpp  ast_ext.hpp  context.hpp  context_resolve.cpp  context_resolve.hpp  expr_resolve.cpp  float_def_resolve.cpp  forward_decl.hpp  identifier_resolve.hpp  init_symdb.hpp  int_def_resolve.cpp  lambda_def_resolve.cpp  module_resolve.cpp  root_resolve.cpp  routine_resolve.cpp  symtable.hpp  typeindex.hpp  typeinfer.hpp  utils.hpp
src/catk/behavior/: gen_llvm.cpp  gen_llvm.hpp  memory.hpp  unit.hpp
src/catk/error/: rule_violation.hpp
src/catk/io/: fmt_stream.cpp  fmt_stream.hpp
src/catk/memory/: vector_based.hpp
src/catk/semantics/: ast_visitor.hpp  constant.cpp  constant.hpp  context.cpp  context.hpp  expr.cpp  expr.hpp  function.hpp  (+14 more)
(+60 files in other folders)
